harbour/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: harbor
  namespace: harbor
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`registry.cgraaaj.in`)
      kind: Rule
      services:
        - name: harbor
          port: 80
      middlewares:
        - name: default-headers
          namespace: default
  tls:
    secretName: registry-cgraaaj-in-tls
